# House_prices_prediction

./: README.md  pyproject.toml
src/data/: X_test.npy  X_train.npy  housing_data.csv  y_test.npy  y_train.npy
src/models/: best_forest.pkl  scaler.pkl
src/notebooks/: main.ipynb
