[tool.poetry]
name = "house-prices-prediction"
version = "0.1.0"
description = "Prediction of house precies based on multiple factors using advanced Regression techniques."
authors = ["Szymon Budziak"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src", from = "." }]

[tool.poetry.dependencies]
python = ">=3.11"
numpy = "^2.0.1"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
scikit-learn = "^1.5.1"
optuna = "^3.6.1"

[tool.poetry.group.dev.dependencies]
notebook = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
